--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ name = "rrm"
 path = "src/main.rs"
 
 [dependencies]
+ratatui = { version = "0.29.0", features = ["crossterm"] }  # 升级版本并添加scrollbar特性
 redis = "0.23.0"
-tui = "0.19.0"
 crossterm = "0.25.0"
 unicode-segmentation = "1.10.1"
 thiserror = "1.0.40"
