--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,12 +5,27 @@ permissions:
 
 on:
   push:
+    branches:
+      - main
     tags:
       - v[0-9]+.*
 
-jobs:
+jobs:     
+  # 构建作业 - 对main分支push和tag都执行
+  build:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Build
+        run: cargo build --release
+      - name: Run tests
+        run: cargo test --all --verbose
+
   create-release:
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
       - uses: taiki-e/create-gh-release-action@v1
@@ -20,6 +35,7 @@ jobs:
 
   upload-assets:
     needs: create-release
+    if: startsWith(github.ref, 'refs/tags/')
     strategy:
       matrix:
         include:
